--- a/oceantech/oceantech/src/app/styles/Resume.scss
+++ b/oceantech/oceantech/src/app/styles/Resume.scss
@@ -39,11 +39,27 @@
 }
 
 .add-button:hover {
-  color: #1876b2;
+  opacity: 0.7;
+  // color: #1876b2;
 }
 
 .remove-button:hover {
-  color: #d32f2f;
+  opacity: 0.7;
+  // color: #d32f2f;
+}
+
+.form-resume .css-2ulfj5-MuiTypography-root,
+.form-resume .css-1y8v3j7-MuiTypography-root,
+.form-resume .css-tjvwag-MuiTypography-root,
+.form-resume .css-z49yrg-MuiTypography-root,
+.form-resume .css-ahj2mt-MuiTypography-root,
+.form-resume .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input,
+.form-resume .css-1v7ub50-MuiTypography-root,
+.form-resume .css-15wwp11-MuiTableHead-root,
+.form-resume .css-1qgma8u-MuiButtonBase-root-MuiTableSortLabel-root,
+.form-resume .css-dsuxgy-MuiTableCell-root {
+  // background-color: #d32f2f;
+  font-family: 'Times New Roman', Times, serif !important;
 }
 
 .table-resume {
@@ -51,57 +67,65 @@
   box-shadow: none !important;
 }
 
+.table-resume .css-1ex1afd-MuiTableCell-root {
+  border: 1px solid black;
 
-.hai-test, .hai-testt {
+}
+
+
+.rs-noReadonly, .rs-readonly {
   color: #d32f2f;
   padding: 0 !important;
 }
 
-.hai-test::after {
+.rs-noReadonly::after {
   position: absolute;
   content: "";
   width: 100%;
-  bottom: 5px;
+  bottom: 4px;
   height: 1px;
   border-bottom: 2px dotted black;
 }
 
-.hai-test .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input, .hai-testt .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input{
+.rs-noReadonly .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input, 
+.rs-readonly .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input{
   padding: 0;
 }
 
 
-.hai-test-cv,
-.hai-testt-cv {
+.cv-noReadonly,
+.cv-readonly {
     color: #d32f2f;
     padding: 0 !important;
 }
 
-.hai-test-cv::after {
+.cv-noReadonly::after {
     position: absolute;
     content: "";
     width: 100%;
     // bottom: 20px;
-    bottom: 17px;
+    bottom: 16px;
     left: 14px;
     // right: -14px;
     height: 1px;
     border-bottom: 2px dotted black;
 }
 
-.hai-test-cv .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input,
-.hai-testt-cv .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
+.cv-noReadonly .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input,
+.cv-readonly .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
     padding: 0 ;
 }
 
-.hai-test-cv .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input,
-.hai-testt-cv .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+.cv-noReadonly .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input,
+.cv-readonly .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
   // padding: 16.5px 7px ;
-  padding: 12px 7px ;
-  margin-left: 7px;
+  // padding: 12px 7px ;
+  // margin-left: 7px;
+  padding: 12px 0 ;
+  margin-left: 14px;
 }
 
-.haikhuat .MuiOutlinedInput-root.MuiInputBase-sizeSmall {
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
+// .haikhuat .MuiOutlinedInput-root.MuiInputBase-sizeSmall {
+//   padding-top: 2px;
+//   padding-bottom: 2px;
+// }
