--- a/oceantech/oceantech/src/app/styles/Resume.scss
+++ b/oceantech/oceantech/src/app/styles/Resume.scss
@@ -39,13 +39,13 @@
 }
 
 .add-button:hover {
-  opacity: 0.7;
-  // color: #1876b2;
+  // padding: 0 !important;
+  color: #1876b2;
 }
 
 .remove-button:hover {
-  opacity: 0.7;
-  // color: #d32f2f;
+  // padding: 0 !important;
+  color: #d32f2f;
 }
 
 .form-resume .css-2ulfj5-MuiTypography-root,
@@ -128,4 +128,9 @@
 // .haikhuat .MuiOutlinedInput-root.MuiInputBase-sizeSmall {
 //   padding-top: 2px;
 //   padding-bottom: 2px;
+// }
+
+// .workExperiences .css-g880av-MuiButtonBase-root-MuiIconButton-root {
+//   padding: 0;
+//   background-color: #d32f2f;
 // }
