--- a/oceantech/oceantech/src/app/styles/Resume.scss
+++ b/oceantech/oceantech/src/app/styles/Resume.scss
@@ -57,7 +57,8 @@
 .form-resume .css-1v7ub50-MuiTypography-root,
 .form-resume .css-15wwp11-MuiTableHead-root,
 .form-resume .css-1qgma8u-MuiButtonBase-root-MuiTableSortLabel-root,
-.form-resume .css-dsuxgy-MuiTableCell-root {
+.form-resume .css-dsuxgy-MuiTableCell-root,
+.form-resume .css-6aghek-MuiTypography-root {
   // background-color: #d32f2f;
   font-family: 'Times New Roman', Times, serif !important;
 }
