--- a/oceantech/oceantech/src/app/app.scss
+++ b/oceantech/oceantech/src/app/app.scss
@@ -1,6 +1,7 @@
 @import "./styles/Resume.scss";
 @import "./styles/Relation.scss";
 @import "./styles/ConfirmDialog.scss";
+@import "./styles/ReleaseDialog.scss";
 * {
   font-family: "Roboto", "Helvetica", "Arial", sans - serif;
 
