sua style inline

--- a/oceantech/oceantech/src/app/app.scss
+++ b/oceantech/oceantech/src/app/app.scss
@@ -2,6 +2,9 @@
 @import "./styles/Relation.scss";
 @import "./styles/ConfirmDialog.scss";
 @import "./styles/ReleaseDialog.scss";
+@import "./styles/CurriculumVitae.scss";
+@import "./styles/Diploma.scss";
+
 * {
   font-family: "Roboto", "Helvetica", "Arial", sans - serif;
 
