--- a/oceantech/oceantech/src/app/styles/Resume.scss
+++ b/oceantech/oceantech/src/app/styles/Resume.scss
@@ -4,22 +4,14 @@
 //   position: relative;
 // }
 .resume-left {
-  // background-color: rgba(34, 42, 69, 0.96);
   background-color: #373E58;
   box-sizing: border-box;
   color: white;
-  // padding-bottom: 48px;
-  // padding-bottom: 10px;
-  // width: 60%;
 }
 
-.resume-right {
-  // width: 100%;
-  // max-height: 600px;
-  // overflow-y: scroll;
-  // max-width: 600px;
-  // overflow-x: scroll;
-}
+// .resume-right {
+
+// }
 
 .item-box {
   display: flex;
