--- a/oceantech/oceantech/src/app/styles/Resume.scss
+++ b/oceantech/oceantech/src/app/styles/Resume.scss
@@ -39,6 +39,11 @@
   // padding: 0 !important;
   color: #d32f2f;
 }
+.form-resume {
+  height: 500px;
+  overflow-y: scroll;
+  padding: 0 50px;
+}
 
 .form-resume .css-2ulfj5-MuiTypography-root,
 .form-resume .css-1y8v3j7-MuiTypography-root,
@@ -51,13 +56,30 @@
 .form-resume .css-1qgma8u-MuiButtonBase-root-MuiTableSortLabel-root,
 .form-resume .css-dsuxgy-MuiTableCell-root,
 .form-resume .css-6aghek-MuiTypography-root {
-  // background-color: #d32f2f;
   font-family: 'Times New Roman', Times, serif !important;
+}
+
+.resum-container {
+  margin-bottom: 48px;
+  display: flex;
+  justify-content: space-between;
+}
+.note-relation {
+  font-style: italic;
+  font-size: 16px;
+
+}
+
+.self-items {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .table-resume {
   transition: none !important;
   box-shadow: none !important;
+  margin: 10px 0 20px !important;
 }
 
 .table-resume .css-1ex1afd-MuiTableCell-root {
@@ -65,6 +87,23 @@
 
 }
 
+.date-signatune {
+  font-style: italic;
+}
+
+.title-name-signatune {
+  font-weight: bold !important;
+}
+
+.note-signatune {
+  font-style: italic;
+  font-size: 14px;
+}
+
+.name-signatune {
+  font-weight: bold !important;
+  font-style: italic;
+}
 
 .rs-noReadonly, .rs-readonly {
   color: #d32f2f;
