--- a/oceantech/oceantech/src/app/app.scss
+++ b/oceantech/oceantech/src/app/app.scss
@@ -5,6 +5,7 @@
 @import "./styles/CurriculumVitae.scss";
 @import "./styles/Diploma.scss";
 @import "./styles/index.scss";
+@import "./styles/AddNewEmployee/index.scss";
 
 * {
   font-family: "Roboto", "Helvetica", "Arial", sans - serif;
