--- a/oceantech/oceantech/src/app/styles/index.scss
+++ b/oceantech/oceantech/src/app/styles/index.scss
@@ -4,6 +4,8 @@
     justify-content: space-between;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     padding: 9px 24px !important;
+    // font-weight: 550 !important;
+    font-size: 22px !important;
 }
 
 .dialog-content-employeeDialog {
@@ -35,12 +37,14 @@
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     padding: 9px 24px !important;
     z-index: 1000;
+    // font-weight: 550 !important;
+    font-size: 22px !important;
 }
 
 .dialog-content {
     flex-grow: 1;
     display: flex;
-    padding: 0 24px;
+    padding: 0 24px !important;
     margin-top: 8px;
 }
 
