--- a/oceantech/oceantech/src/app/styles/ReleaseDialog.scss
+++ b/oceantech/oceantech/src/app/styles/ReleaseDialog.scss
@@ -16,11 +16,7 @@
   border-bottom: 2px dotted black;
 }
 .luan .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input,
-.luan .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input
-
-// .luan2 .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input,
-// .luan2 .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input
-{
+.luan .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
   padding: 0;
 }
 
