--- a/oceantech/oceantech/src/app/styles/Resume.scss
+++ b/oceantech/oceantech/src/app/styles/Resume.scss
@@ -121,7 +121,7 @@
 
 .rs-noReadonly .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input, 
 .rs-readonly .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input{
-  padding: 0;
+  padding: 1px;
 }
 
 
