--- a/oceantech/oceantech/src/app/styles/CurriculumVitae.scss
+++ b/oceantech/oceantech/src/app/styles/CurriculumVitae.scss
@@ -6,7 +6,9 @@
 }
 
 .resume-right {
-    height: 660px;
+    // height: 660px;
+    height: 100%;
+    max-height: 660px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
